<resources>
    <string name="app_name">EvVol</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="telephone">Телефон</string>
    <string name="email">Электронная почта</string>
    <string name="city">Город</string>
    <string name="date_birth">Дата рождения</string>
    <string name="surname">Фамилия</string>
    <string name="name">Имя</string>
    <string name="registration">Регистрация</string>
    <string name="password">Пароль</string>
    <string name="password_confirm">Повторите пароль</string>
    <string name="create_account">Создать аккаунт</string>
    <string name="login_text">У меня есть аккаунт!</string>
    <string name="login">Войти</string>
    <string name="singup_text">Нет аккаунта? Зарегистрируйся сейчас!</string>
    <string name="login_text_">Вход</string>
    <string name="profile">Профиль</string>
    <string name="notification">Уведомления</string>
    <string name="events">События</string>
    <string name="map">Карта</string>
    <string name="title_location_permission">Текст</string>
    <string name="text_location_permission">Текст 2</string>
    <string name="ok">Ок</string>
    <string name="test_user_id">ID: 1488</string>
    <string name="test_username">Жульдамек Афанасий Никитич</string>
    <string name="aboutMe">О себе</string>
    <string name="lorem_24">Lorem Ipsum - это текст-рыба, часто используемый в печати и вэб-дизайне. Lorem Ipsum является стандартной рыбой для текстов на латинице с начала XVI века.</string>
    <string name="contacts">Контакты</string>
    <string name="volonteers">Волонтеры</string>

    <string-array name="cities">
        <item>Ульяновск</item>
        <item>Москва</item>
        <item>Владивосток</item>
        <item>Воркута</item>
    </string-array>
</resources>