<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/events"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/bolt"
        android:id="@+id/events"/>
    <item android:title="@string/volonteers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/person_search"
        android:id="@+id/volunteers"/>
    <item android:title="@string/map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/location"
        android:id="@+id/map"/>
    <item android:title="@string/notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/notifications"
        android:id="@+id/notification"/>
    <item android:title="@string/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/account_circle"
        android:id="@+id/profile"/>
</menu>