<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.login.LoginFragment"
    android:id="@+id/login_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="80dp" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:padding="24dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/login_text_"
                    android:textSize="40sp"
                    android:textAlignment="center"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:shapeAppearance="@style/rounded"
                    android:layout_marginTop="20dp"

                    app:boxStrokeColor="@color/green"
                    app:cursorColor="#49454F"
                    app:hintTextColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/email"
                        android:maxLines="1"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"

                    app:shapeAppearance="@style/rounded"

                    app:endIconMode="password_toggle"
                    app:helperTextTextColor="@color/red"

                    app:boxStrokeColor="@color/green"
                    app:cursorColor="#49454F"
                    app:hintTextColor="@color/green">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="55dp"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:maxLines="1" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/loginButton"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:layout_marginTop="20dp"
                    android:backgroundTint="@color/green"
                    app:cornerRadius="20dp" />

                <TextView
                    android:id="@+id/singupText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp"
                    android:text="@string/singup_text"
                    android:textSize="14sp"
                    android:textAlignment="center"
                    android:textColor="@color/green" />

            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>

</FrameLayout>