<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.register.RegisterFragment"
    android:id="@+id/register_fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="18dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="80dp" >
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scrollbars="none" >

                    <LinearLayout
                        android:id="@+id/linear_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="center_horizontal"
                        android:padding="24dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/registration"
                            android:textSize="40sp"
                            android:textAlignment="center"
                            android:textStyle="bold" />

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/name_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="20dp"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/name"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/name"
                                android:maxLines="1"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/surname_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/surname"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/surname"
                                android:maxLines="1"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/date_birth_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"

                            app:endIconMode="custom"
                            app:endIconDrawable="@drawable/calendar"
                            app:errorIconDrawable="@drawable/calendar"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/date_birth"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/date_birth"
                                android:enabled="false"
                                android:maxLines="1"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/city_layout"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"
                            app:endIconMode="dropdown_menu"
                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <AutoCompleteTextView
                                android:id="@+id/city_autoCompleteTextView"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:padding="12dp"
                                android:hint="@string/city"
                                android:maxLines="1"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/email_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/email"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/email"
                                android:inputType="textEmailAddress"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/telephone_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/telephone"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/telephone"
                                android:maxLines="1"
                                android:inputType="text"/>
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"

                            app:endIconMode="password_toggle"
                            app:helperTextTextColor="@color/red"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/password"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/password_confirm_layout"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:shapeAppearance="@style/rounded"
                            android:layout_marginTop="5dp"

                            app:endIconMode="password_toggle"
                            app:helperTextTextColor="@color/red"

                            app:boxStrokeColor="@color/green"
                            app:cursorColor="#49454F"
                            app:hintTextColor="@color/green">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/password_confirm"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                android:hint="@string/password_confirm"
                                android:inputType="textPassword"
                                android:maxLines="1" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <Button
                            android:id="@+id/register_button"
                            android:layout_width="match_parent"
                            android:layout_height="60dp"
                            android:text="@string/create_account"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            android:layout_marginTop="20dp"
                            android:backgroundTint="@color/green"
                            app:cornerRadius="20dp" />

                        <TextView
                            android:id="@+id/login_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="8dp"
                            android:text="@string/login_text"
                            android:textSize="14sp"
                            android:textAlignment="center"
                            android:textColor="@color/green" />
                    </LinearLayout>
                </ScrollView>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</FrameLayout>